<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:background="@drawable/app_background"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:typeface="serif"
        android:textColor="@color/MintCream"
        android:gravity="center"
...
        android:id="@+id/words_container"
        android:layout_width="368dp"
        android:layout_height="368dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/border_list"
        android:layout_below="@+id/solution_container"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/try_solution"
        android:layout_width="95dp"
...
