...


    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/success"
        android:id="@+id/text_dialog"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:gravity="center_horizontal"
        android:layout_below="@+id/a"
...
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/text_dialog">


        <TextView
            android:id="@+id/solution_dialog"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:textColor="#ff000000"
            android:textSize="18sp"
...
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="262dp"
            app:layout_constraintHorizontal_bias="0.974" />

        <Button
            android:id="@+id/btn_selectDifferent"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/DeepSkyBlue"
            android:text="@string/slecetDifferentSong"
            android:textColor="#ffffffff"
            app:layout_constraintLeft_toLeftOf="parent"
...
