...
        android:layout_height="120dp"
        android:id="@+id/exampleView"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btn_ok_dialog"
        android:layout_alignParentEnd="true" />



        <Button
            android:id="@+id/btn_ok_dialog"
...
